# ptuber

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
assets/: config.toml
scripts/: install-sfml-dev.sh  package.sh
src/: args.rs  consts.rs  errors.rs  lib.rs  main.rs
src/avatar/: arms.rs  avatar_impl.rs  device.rs  errors.rs  mod.rs  textures.rs  window.rs
src/config/: config.rs  config_impl.rs  errors.rs  mod.rs
src/models/: keyboard.rs  linux.rs  mod.rs  mouse.rs  traits.rs  types.rs  windows.rs
src/os_ui/: linux.rs  mod.rs  windows.rs
src/sfml/: avatar.rs  errors.rs  mod.rs  textures.rs  window.rs
src/ui_util/: errors.rs  linux.rs  mod.rs  user_input.rs  windows.rs
src/user_input/: drain_filter.rs  errors.rs  mod.rs  notifier.rs  user_input_monitor.rs
src/user_input/gamepad/: mod.rs  sdl_parse.rs  types.rs
src/util/: bezier.rs  errors.rs  linux.rs  mod.rs  windows.rs
src/view_models/: keyboard.rs  mod.rs  mouse.rs  traits.rs  types.rs
