[package]
name = "ptuber"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of a simplified VTuber rigging software"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
derive_more = "0.99"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
clap = { version = "4", features = ["derive", "cargo"] }
sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="static-build", features=["serde"]}
log = "0.4"
cfg-if = "1"
dyn-clone = "1"
env_logger = "0.10"
device_query = "1"
either = { version = "1", features = ["serde"] }
rust-embed = { version = "6.4", features = ["include-exclude"] }


[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
x11rb = { version = "0.11", features = ["xinerama", "randr"]}


[target.'cfg(all(windows, target_os = "windows"))'.dependencies]
windows = { version = "0.43", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Console"] }


